Adding new cat img

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <section class="container">
       <p class="click-number">Don't click on the cat please.</p>
       <img src="img/cat.jpg" class="cat" alt="cat" />
+      <img src="img/cat2.jpg" class="cat" alt="cat" />
     </section>
     <script src="js/main.js"></script>
   </body>
