Updating cat names

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/style.css" />
     <title>Cat Clicker</title>
   </head>
   <body>
     <section class="container">
-      <p class="click-number">Don't click on the cat please.</p>
+      <p class="click-number">Don't click on Lily please.</p>
       <img src="img/cat.jpg" class="cat" alt="cat" />
+      <p>Cat1</p>
+      <p class="click-number">Don't click on Nordy please.</p>
       <img src="img/cat2.jpg" class="cat" alt="cat" />
+      <p>Cat2</p>
     </section>
     <script src="js/main.js"></script>
   </body>
