Updating missed cat names

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <section class="container">
       <p class="click-number">Don't click on Lily please.</p>
       <img src="img/cat.jpg" class="cat" alt="cat" />
-      <p>Cat1</p>
+      <p>Lily</p>
       <p class="click-number">Don't click on Nordy please.</p>
       <img src="img/cat2.jpg" class="cat" alt="cat" />
-      <p>Cat2</p>
+      <p>Nordy</p>
     </section>
     <script src="js/main.js"></script>
   </body>
