Restructuer index page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title>Cat Clicker</title>
   </head>
   <body>
-    <section class="container">
-      <p class="click-number">Don't click on Lily please.</p>
-      <img src="img/cat.jpg" class="cat" alt="cat" />
-      <p>Lily</p>
-      <p class="click-number">Don't click on Nordy please.</p>
-      <img src="img/cat2.jpg" class="cat" alt="cat" />
-      <p>Nordy</p>
-    </section>
+    <main class="container">
+      <section class="cat-container">sssss</section>
+      <aside class="cat-list">aaaaa</aside>
+    </main>
     <script src="js/main.js"></script>
   </body>
 </html>
