Styling cat list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="container">
       <section class="cat-container">sssss</section>
-      <aside class="cat-list">aaaaa</aside>
+      <aside class="cat-list"></aside>
     </main>
     <script src="js/main.js"></script>
   </body>
