Adding styling rules to cat-pic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="container">
-      <section class="cat-container">sssss</section>
+      <section class="cat-container"></section>
       <aside class="cat-list"></aside>
     </main>
     <script src="js/main.js"></script>
