--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <main class="container">
-      <section class="cat-container"></section>
+      <section class="cat-container">
+        <p class="cat-name"></p>
+        <img class="cat-pic" src="#" alt="#" />
+      </section>
       <aside class="cat-list"></aside>
     </main>
     <script src="js/main.js"></script>
