Adding admin button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <section class="cat-container">
         <p class="cat-name"></p>
         <img class="cat-pic" src="#" alt="#" />
+        <button class="admin-button">Admin</button>
       </section>
       <aside class="cat-list"></aside>
     </main>
