Adding update section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
         <button class="admin-button">Admin</button>
       </section>
       <aside class="cat-list"></aside>
+      <section class="update-cat-info">
+        <section class="cat-name">
+          <label for="">Cat Name:</label>
+          <input type="text" />
+        </section>
+        <section class="cat-url">
+          <label for="">Cat URL:</label>
+          <input type="text" />
+        </section>
+        <section class="cat-clicks">
+          <label for="">Clicks:</label>
+          <input type="number" />
+        </section>
+        <button class="cat-update-info">Update</button>
+      </section>
     </main>
     <script src="js/main.js"></script>
   </body>
