--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       <aside class="cat-list"></aside>
       <section class="update-cat-info">
         <section class="cat-name">
-          <label for="">Cat Name:</label>
-          <input type="text" />
+          <label for="cat-name">Cat Name:</label>
+          <input type="text" id="cat-name-i" />
         </section>
         <section class="cat-url">
-          <label for="">Cat URL:</label>
-          <input type="text" />
+          <label for="cat-url">Cat URL:</label>
+          <input type="text" id="cat-url-i" />
         </section>
         <section class="cat-clicks">
-          <label for="">Clicks:</label>
-          <input type="number" />
+          <label for="cat-clicks">Clicks:</label>
+          <input type="number" id="cat-clicks-i" />
         </section>
-        <button class="cat-update-info">Update</button>
+        <button id="cat-update-info">Update</button>
       </section>
     </main>
     <script src="js/main.js"></script>
